# SafetyTcpConn

./: CHANGELOG.md  CMakeLists.txt  README.md
demo/: main.cpp
include/SafetyTcpConn/: SafetyTcpConn.hpp
include/SafetyTcpConn/Classes/: Classes.hpp  Connection.hpp  Connection.impl.hpp  Connection_Func.hpp  Container.hpp  Core.hpp  Core_Func.hpp  Endpoint.hpp  Endpoint.impl.hpp  Endpoint_Func.hpp
lib/SafetyTcpConn/: Connection.hpp  Endpoint.hpp  SafetyTcpConn.hpp
lib/SafetyTcpConn/Classes/: Connection.hpp  Connection_Func.hpp  Endpoint.hpp  Endpoint_Func.hpp
src/: main.cpp
test/: test.py
